--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -68,7 +68,7 @@
 	$(function() {
 		url = window.location.pathname
 		var index = 0;
-		if(url=="/admin/articles")
+		if(url=="/admin/articles" || url=="/admin/article/new")
 			index=1;
 		else if(url=="/admin/timeline")
 			index=3
