--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
 <body>
 	<div id="name">Dantangfan</div>
 	<div class="hashtag">
-		<a href="http://www.dantangfan.com/blog" target="_blank" class="hashtag">Blog</a>
-		<a href="http://www.dantangfan.com/timeline" class="hashtag">Timeline</a>
+		<a href="/articles" target="_blank" class="hashtag">Blog</a>
+		<a href="/timeline" class="hashtag">Timeline</a>
 	</div>
 	<div id="bio">
 		Here are some sentences
