--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -54,7 +54,7 @@
 				</li>
 			</ul>
 		</div>
-		<div id="section" class="col-md-10 col-sm-9 col-xs-10">
+		<div id="section" class="col-md-10 col-sm-9 col-xs-10" style="margin-top: 20px;">
 		{%block main%}
 			main Page
 		{%end block%}
