--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-8 col-sm-8 col-xs-10"></div>
+		<div class="col-md-8 col-sm-8 col-xs-10">
         	<div class="row" id="header">
         		<div class="col-md-4 col-sm-4 col-xs-4"></div>
         		<div class="col-md-4 col-sm-4 col-xs-4" style="text-align: center;margin-top: 10px;">
@@ -52,9 +52,9 @@
         	{%block main%}
         	{%end%}
 		</div>
-		<div class="col-md-4 col-sm-4 col-xs-2"></div>
-		aside
-		</div>
+	</div>
+	<div class="col-md-4 col-sm-4 col-xs-2">
+	aside
 	</div>
 	<div class="row" id="footer">
 		<div class="col-md-4 col-sm-4 col-xs-4"></div>
